--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
 <div class="container">
-<app-generalinfo></app-generalinfo>
+  <app-generalinfo></app-generalinfo>
+  <div class="header">
+    <app-header></app-header>
+  </div>
+  <div class="categoryBar">
+    <app-category-bar></app-category-bar>
+  </div>
+  <div class="bannerArea">
+    <app-banner></app-banner>
+  </div>
 </div>
