--- a/src/app/components/generalinfo/generalinfo.component.html
+++ b/src/app/components/generalinfo/generalinfo.component.html
@@ -1,5 +1,16 @@
-<div class="row justify-content-end">
-    <div class="col-2">
-        hi there
+<div class="row generalInfo">
+    <div class="col-3">
+        <div class="row">
+            <div class="col-3">
+                Career
+            </div>
+            <div class="col-4 aboutUs">
+                About Us
+            </div>
+            <div class="col">
+                Contact
+            </div>
+        </div>
     </div>
+       
 </div>
