--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,5 +1,22 @@
 <div class="row">
-    <div class="col" style="height: 50vh; border: solid 1px red; border-radius: 60px;">
-        <img src="../../../../Images/Suit Man 3.jpg" alt="Main Banner">
+    <div class="col bannerArea">
+        <img  src="../../../assets/Images/Suit Man 3.jpg" class="banner" alt="Main Banner">
+    </div>
+</div>
+<div class="row justify-content-center">
+    <div class="col-2 subBannerArea" >
+        <img class="subBanner" src="../../../assets/Images/subbanner suit.jpg" alt="Subbanner Suit">
+    </div>
+    <div class="col-2 subBannerArea" >
+        <img class="subBanner" src="../../../assets/Images/subbanner shirt.jpg" alt="Subbanner Suit">
+    </div>
+    <div class="col-2 subBannerArea" >
+        <img class="subBanner" src="../../../assets/Images/subbaner trousers.jpg" alt="Subbanner Suit">
+    </div>
+    <div class="col-2 subBannerArea" >
+        <img class="subBanner" src="../../../assets/Images/subbanner shoes.jpg" alt="Subbanner Suit">
+    </div>
+    <div class="col-2 subBannerArea" >
+        <img class="subBanner" src="../../../assets/Images/subbanner watch.png" alt="Subbanner Suit">
     </div>
 </div>
