app.component got neat, no <div> whatsoever.

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,71 +1,73 @@
-<div class="row">
-    <div class="col-1 align-self-center companyLogo">
-        <fa-icon [icon]="CompanyLogo" size="2x"></fa-icon>
-    </div>
-    <div class="col-2">
-        <div class="row">
-            <div class="col companyName">
-                Sneety
+<div class="header">
+    <div class="row">
+        <div class="col-1 align-self-center companyLogo">
+            <fa-icon [icon]="CompanyLogo" size="2x"></fa-icon>
+        </div>
+        <div class="col-2">
+            <div class="row">
+                <div class="col companyName">
+                    Sneety
+                </div>
+            </div>
+            <div class="row">
+                <div class="col slogan">
+                    <i>
+                        Dress Classy
+                    </i>
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col slogan">
-                <i>
-                    Dress Classy
-                </i>
-            </div>
+        <div class="col-5 align-self-center">
+            <fa-icon [icon]="SearchBarLogo" class="searchBarLogo"></fa-icon>
+            <input class="searchBar" type="text" placeholder="Shirts are 30% off!">
         </div>
-    </div>
-    <div class="col-5 align-self-center">
-        <fa-icon [icon]="SearchBarLogo" class="searchBarLogo"></fa-icon>
-        <input class="searchBar" type="text" placeholder="Shirts are 30% off!">
-    </div>
-    <div class="col-2">
-        <div class="row justify-content-end">
-            <div class="col-8 offset-2 logIn">
-                <div class="row">
-                    <div class="col-3 align-self-center userLogo">
-                        <fa-icon [icon]="UserLogo" size="2x" class="userLogo"></fa-icon>
-                    </div>
-                    <div class="col-9 align-self-center">
-                        <div class="row">
-                            <div class="col logInText">
-                            Log in        
-                            </div>
+        <div class="col-2">
+            <div class="row justify-content-end">
+                <div class="col-8 offset-2 logIn">
+                    <div class="row">
+                        <div class="col-3 align-self-center userLogo">
+                            <fa-icon [icon]="UserLogo" size="2x" class="userLogo"></fa-icon>
                         </div>
-                        <div class="row">
-                            <div class="col orRegisterText">
-                            or register
+                        <div class="col-9 align-self-center">
+                            <div class="row">
+                                <div class="col logInText">
+                                    Log in
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col orRegisterText">
+                                    or register
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
-            
         </div>
-    </div>
-    <div class="col-2">
-        <div class="row">
-            <div class="col-9 offset-1 shoppingCart">
-                <div class="row">
-                    <div class="col-3 align-self-center userLogo">
-                        <fa-icon [icon]="ShoppingCartLogo" size="2x" class="userLogo"></fa-icon>
-                    </div>
-                    <div class="col-9 align-self-center">
-                        <div class="row">
-                            <div class="col shoppingCartText">
-                            Shopping        
-                            </div>
+        <div class="col-2">
+            <div class="row">
+                <div class="col-9 offset-1 shoppingCart">
+                    <div class="row">
+                        <div class="col-3 align-self-center userLogo">
+                            <fa-icon [icon]="ShoppingCartLogo" size="2x" class="userLogo"></fa-icon>
                         </div>
-                        <div class="row">
-                            <div class="col shoppingCartText">
-                            Cart
+                        <div class="col-9 align-self-center">
+                            <div class="row">
+                                <div class="col shoppingCartText">
+                                    Shopping
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col shoppingCartText">
+                                    Cart
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
-            
         </div>
     </div>
 </div>
