Product display is completed with api call

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
   <app-header></app-header>
   <app-category-bar></app-category-bar>
   <app-banner></app-banner>
+  <app-product-recom></app-product-recom>
 </div>
