UI design for product display is done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <div class="container">
   <app-generalinfo></app-generalinfo>
-  <app-header></app-header>
-  <app-category-bar></app-category-bar>
+<div class="row sticky-top">
+  <div class="col">
+    <app-header></app-header>
+    <app-category-bar></app-category-bar>
+  </div>
+</div>
   <app-banner></app-banner>
   <app-product-recom></app-product-recom>
 </div>
