--- a/src/app/components/product-recom/product-recom.component.html
+++ b/src/app/components/product-recom/product-recom.component.html
@@ -1,7 +1,7 @@
-<div class="prodRecomArea">
+<div class="prodRecomArea" *ngFor="let item of data">
     <div class="row">
         <div class="col-1">
-            Suits
+            Products
         </div>
         <div class="col-1">
             <div class="row">
@@ -12,15 +12,20 @@
         </div>
     </div>
     <div class="row justify-content-between productRecomProducts">
-        <div class="col-2" *ngFor="let item of data" style="border: solid 1px green;">
+        <div class="col-2 productRecomItems" *ngFor="let item of data">
             <div class="row">
                 <div class="col">
-                    <img src="{{ item.image }}" alt="Product Image" style="height: 100%; width: 100%; max-height: 25vh;">         
+                    <img src="{{ item.image }}" alt="Product Image" class="productRecomImage">         
                 </div>
             </div>
             <div class="row">
-                <div class="col align-self-bottom">
+                <div class="col productName">
                     {{ item.title }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col productDetailText">
+                    Product Detail
                 </div>
             </div>
          </div>
