--- a/src/app/components/generalinfo/generalinfo.component.css
+++ b/src/app/components/generalinfo/generalinfo.component.css
@@ -1,9 +1,9 @@
-.generalInfo{
+.general-info{
     justify-content: flex-end;
     text-decoration: underline;
     font-size: 13px;
 }
 
-.aboutUs{
+.about-us{
     text-align: center;
 }
