--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,11 @@
 <div class="header">
     <div class="row">
-        <div class="col-1 align-self-center companyLogo">
+        <div class="col-1 align-self-center company-logo">
             <fa-icon [icon]="CompanyLogo" size="2x"></fa-icon>
         </div>
         <div class="col-2">
             <div class="row">
-                <div class="col companyName">
+                <div class="col company-name">
                     Sneety
                 </div>
             </div>
@@ -18,24 +18,24 @@
             </div>
         </div>
         <div class="col-5 align-self-center">
-            <fa-icon [icon]="SearchBarLogo" class="searchBarLogo"></fa-icon>
-            <input class="searchBar" type="text" placeholder="Shirts are 30% off!">
+            <fa-icon [icon]="SearchBarLogo" class="search-bar-logo"></fa-icon>
+            <input class="search-bar" type="text" placeholder="Shirts are 30% off!">
         </div>
         <div class="col-2">
             <div class="row justify-content-end">
-                <div class="col-8 offset-2 logIn">
+                <div class="col-8 offset-2 log-in">
                     <div class="row">
-                        <div class="col-3 align-self-center userLogo">
-                            <fa-icon [icon]="UserLogo" size="2x" class="userLogo"></fa-icon>
+                        <div class="col-3 align-self-center user-logo">
+                            <fa-icon [icon]="UserLogo" size="2x" class="user-logo"></fa-icon>
                         </div>
                         <div class="col-9 align-self-center">
                             <div class="row">
-                                <div class="col logInText">
+                                <div class="col log-in-text">
                                     Log in
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col orRegisterText">
+                                <div class="col or-register-text">
                                     or register
                                 </div>
                             </div>
@@ -47,19 +47,19 @@
         </div>
         <div class="col-2">
             <div class="row">
-                <div class="col-9 offset-1 shoppingCart">
+                <div class="col-9 offset-1 shopping-cart">
                     <div class="row">
-                        <div class="col-3 align-self-center userLogo">
-                            <fa-icon [icon]="ShoppingCartLogo" size="2x" class="userLogo"></fa-icon>
+                        <div class="col-3 align-self-center user-logo">
+                            <fa-icon [icon]="ShoppingCartLogo" size="2x" class="user-logo"></fa-icon>
                         </div>
                         <div class="col-9 align-self-center">
                             <div class="row">
-                                <div class="col shoppingCartText">
+                                <div class="col shopping-cart-text">
                                     Shopping
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col shoppingCartText">
+                                <div class="col shopping-cart-text">
                                     Cart
                                 </div>
                             </div>
