--- a/src/app/components/banner/banner.component.html
+++ b/src/app/components/banner/banner.component.html
@@ -1,22 +1,22 @@
 <div class="row">
-    <div class="col bannerArea">
+    <div class="col banner-area">
         <img  src="../../../assets/Images/Suit Man 3.jpg" class="banner" alt="Main Banner">
     </div>
 </div>
 <div class="row justify-content-center">
-    <div class="col-2 subBannerArea" >
-        <img class="subBanner" src="../../../assets/Images/subbanner suit.jpg" alt="Subbanner Suit">
+    <div class="col-2 sub-banner-area" >
+        <img class="sub-banner" src="../../../assets/Images/subbanner suit.jpg" alt="Subbanner Suit">
     </div>
-    <div class="col-2 subBannerArea" >
-        <img class="subBanner" src="../../../assets/Images/subbanner shirt.jpg" alt="Subbanner Suit">
+    <div class="col-2 sub-banner-area" >
+        <img class="sub-banner" src="../../../assets/Images/subbanner shirt.jpg" alt="Subbanner Suit">
     </div>
-    <div class="col-2 subBannerArea" >
-        <img class="subBanner" src="../../../assets/Images/subbaner trousers.jpg" alt="Subbanner Suit">
+    <div class="col-2 sub-banner-area" >
+        <img class="sub-banner" src="../../../assets/Images/subbaner trousers.jpg" alt="Subbanner Suit">
     </div>
-    <div class="col-2 subBannerArea" >
-        <img class="subBanner" src="../../../assets/Images/subbanner shoes.jpg" alt="Subbanner Suit">
+    <div class="col-2 sub-banner-area" >
+        <img class="sub-banner" src="../../../assets/Images/subbanner shoes.jpg" alt="Subbanner Suit">
     </div>
-    <div class="col-2 subBannerArea" >
-        <img class="subBanner" src="../../../assets/Images/subbanner watch.png" alt="Subbanner Suit">
+    <div class="col-2 sub-banner-area" >
+        <img class="sub-banner" src="../../../assets/Images/subbanner watch.png" alt="Subbanner Suit">
     </div>
 </div>
