--- a/src/app/components/category-bar/category-bar.component.html
+++ b/src/app/components/category-bar/category-bar.component.html
@@ -1,22 +1,22 @@
-<div class="row categoryBar">
+<div class="row category-bar">
     <div class="col-6 align-self-center">
         <div class="row">
-            <div class="col categoryName">
+            <div class="col category-name">
                 Suits
             </div>
-            <div class="col categoryName">
+            <div class="col category-name">
                 Shirts
             </div>
-            <div class="col categoryName">
+            <div class="col category-name">
                 Trousers
             </div>
-            <div class="col categoryName">
+            <div class="col category-name">
                 Shoes
             </div>
-            <div class="col categoryName">
+            <div class="col category-name">
                 Accessories
             </div>
-            <div class="col categoryName">
+            <div class="col category-name">
                 Campaigns
             </div>
         </div>
