--- a/src/app/components/generalinfo/generalinfo.component.html
+++ b/src/app/components/generalinfo/generalinfo.component.html
@@ -1,10 +1,10 @@
-<div class="row generalInfo">
+<div class="row general-info">
     <div class="col-3">
         <div class="row">
             <div class="col-3">
                 Career
             </div>
-            <div class="col-4 aboutUs">
+            <div class="col-4 about-us">
                 About Us
             </div>
             <div class="col">
