--- a/src/app/components/product-row/product-row.component.html
+++ b/src/app/components/product-row/product-row.component.html
@@ -1,4 +1,4 @@
-<div class="prodRecomArea" *ngFor="let item of data">
+<div class="prodRecomArea" *ngFor="let i of [].constructor(3)">
     <div class="row">
         <div class="col-1">
             Products
@@ -12,7 +12,7 @@
         </div>
     </div>
     <div class="row justify-content-between productRecomProducts">
-        <div class="col-2 productRecomItems" *ngFor="let item of data">
+        <div class="col-2 productRecomItems" *ngFor="let item of productList">
             <div class="row">
                 <div class="col">
                     <img src="{{ item.image }}" alt="Product Image" class="productRecomImage">         
