--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header">
     <div class="row">
         <div class="col-1 align-self-center company-logo">
-            <fa-icon [icon]="CompanyLogo" size="2x"></fa-icon>
+            <fa-icon [icon]="companyLogo" size="2x"></fa-icon>
         </div>
         <div class="col-2">
             <div class="row">
@@ -18,15 +18,15 @@
             </div>
         </div>
         <div class="col-5 align-self-center">
-            <fa-icon [icon]="SearchBarLogo" class="search-bar-logo"></fa-icon>
-            <input class="search-bar" type="text" placeholder="Shirts are 30% off!">
+            <fa-icon [icon]="searchBarLogo" class="search-bar-logo"></fa-icon>
+            <input class="search-bar" type="text" placeholder="Shirts are 30% off!" (input)="sendTheNewValue($event)">
         </div>
         <div class="col-2">
             <div class="row justify-content-end">
                 <div class="col-8 offset-2 log-in">
                     <div class="row">
                         <div class="col-3 align-self-center user-logo">
-                            <fa-icon [icon]="UserLogo" size="2x" class="user-logo"></fa-icon>
+                            <fa-icon [icon]="userLogo" size="2x" class="user-logo"></fa-icon>
                         </div>
                         <div class="col-9 align-self-center">
                             <div class="row">
@@ -50,7 +50,7 @@
                 <div class="col-9 offset-1 shopping-cart">
                     <div class="row">
                         <div class="col-3 align-self-center user-logo">
-                            <fa-icon [icon]="ShoppingCartLogo" size="2x" class="user-logo"></fa-icon>
+                            <fa-icon [icon]="shoppingCartLogo" size="2x" class="user-logo"></fa-icon>
                         </div>
                         <div class="col-9 align-self-center">
                             <div class="row">
