--- a/src/app/components/category-product/category-product.component.html
+++ b/src/app/components/category-product/category-product.component.html
@@ -3,6 +3,13 @@
         Price
     </div>
     <div class="col-9">
+        <div class="row">
+            <div class="col">
+                <ngx-slider [(value)]="firstValue" [(highValue)]="lastValue" [options]="options"
+                (valueChange)="getFirstValue($event)" (highValueChange)="getLastValue($event)" style="width: 100vh;">
+                </ngx-slider>
+            </div>
+        </div>
         <div class="row justify-content-between">
             <div class="col-2" *ngFor="let item of displayedProducts">
                 <div class="row">
