--- a/src/app/components/category-product/category-product.component.html
+++ b/src/app/components/category-product/category-product.component.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="row">
                     <div class="col product-name">
-                        {{ item.title }}
+                        {{ item.name }}
                     </div>
                 </div>
                 <div class="row">
