--- a/src/app/components/product-row/product-row.component.html
+++ b/src/app/components/product-row/product-row.component.html
@@ -20,7 +20,7 @@
             </div>
             <div class="row">
                 <div class="col productName">
-                    {{ item.title }}
+                    {{ item.name }}
                 </div>
             </div>
             <div class="row">
